[package]
name = "pixiv-meta-proxy"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
aes-gcm = "0.10.3"
getrandom = { version = "0.2", features = ["js"] }
base64 = { version = "0.21.5", features = [] }
reqwest = { version = "0.11.23", features = [] }

[profile.release]
lto = true
strip = true
codegen-units = 1
